Add design to project-details page

--- a/src/content/projects/StarFighter.mdx
+++ b/src/content/projects/StarFighter.mdx
@@ -10,9 +10,24 @@ import { Image } from 'astro:assets';
 import image1 from '@assets/StarFighter/image-1.png';
 import image2 from '@assets/StarFighter/image-2.png';
 
+<div id="summary">
+    <div>
+        <p class="header">Personal / Hobby</p>
+        <p>Project Type</p>
+    </div>
+    <div>
+        <p class="header">Python, Pygame</p>
+        <p>Languages / Frameworks</p>
+    </div>
+    <div>
+        <p class="header">Programmer, 2D Artist</p>
+        <p>Role(s)</p>
+    </div>
+</div>
+
 **Star Fighter** is a **2D shoot 'em up** which takes heavy inspiration from 80s arcade games like Galaga and Defender. In the game, the player controls the titular star fighter and is tasked with gaining as much score as possible by shooting the endless torrent of enemies and avoiding projectiles.
 
-As sole developer, I wrote the game in **Python** using the **pygame** framework. I also designed and animated the pixel art assets.
+I wrote the game in **Python** using the **pygame** framework. I also designed and animated the pixel art assets.
 
 <div id="gallery">
     <Image src={image1} alt="Star Fighter Intro Screen" />
