--- a/src/content/projects/StarFighter.mdx
+++ b/src/content/projects/StarFighter.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Star Fighter'
-release: '2022'
-summary: "A fast-paced shoot 'em up video game made in the style reminiscent of 80s arcade games."
+release: '2021'
+summary: "A fast-paced shoot 'em up video game in the style reminiscent of 80s arcade games. My first published game."
 techs: ['Python', 'Pygame']
 roles: ['Solo Project'] 
 ---
@@ -9,6 +9,20 @@ roles: ['Solo Project']
 import { Image } from 'astro:assets';
 import image1 from '@assets/StarFighter/image-1.png';
 import image2 from '@assets/StarFighter/image-2.png';
+import image3 from '@assets/StarFighter/image-3.png';
+import image4 from '@assets/StarFighter/image-4.png';
+
+import itch from '@images/itch.png';
+import github from '@images/github.png';
+
+<div class="links line margin-btm-m">
+    <a href="https://github.com/zyenapz" target="_blank" rel="noopener noreferrer">
+        <Image src={github} alt="GitHub" />
+    </a>
+    <a href="https://zyenapz.itch.io/" target="_blank" rel="noopener noreferrer">
+        <Image src={itch} alt="Itch.io" />
+    </a>
+</div>
 
 <div id="summary">
     <div>
@@ -23,13 +37,48 @@ import image2 from '@assets/StarFighter/image-2.png';
         <p class="header">Programmer, 2D Artist</p>
         <p>Role(s)</p>
     </div>
+    <div>
+        <p class="header">May 8, 2021</p>
+        <p>Latest Release</p>
+    </div>
 </div>
 
-**Star Fighter** is a **2D shoot 'em up** which takes heavy inspiration from 80s arcade games like Galaga and Defender. In the game, the player controls the titular star fighter and is tasked with gaining as much score as possible by shooting the endless torrent of enemies and avoiding projectiles.
+**Star Fighter** is a **2D shoot 'em up** which takes inspiration from 80s arcade games like Galaga and Defender, as well as modern titles like ZeroRanger. In the game, the player controls the titular Star Fighter and is tasked with gaining as much score as possible by shooting the endless torrent of enemies and avoiding projectiles.
 
-I wrote the game in **Python** using the **pygame** framework. I also designed and animated the pixel art assets.
+I wrote the game in **Python** using the **pygame** framework. In addition, I designed and animated the pixel art assets. Save for the music, which was composed by a friend, I developed the game solo to familiarize myself with the fundamentals of game development and Python. 
 
-<div id="gallery">
+<div class="iframe-container">
+    <iframe src="https://www.youtube.com/embed/oP6xZnNXMc4?si=QlOrKGkuQIgFhA4e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+
+## In Detail
+
+Star Fighter is the first ever game that I released publicly. Up until then, I've been developing games using pygame and other game engines rather aimlessly. After deciding to settle down with pygame as I felt that full-fledged game engines such as Unity were overwhelming, I hunkered down for a couple of weeks to learn everything I can about it. 
+
+The first version of the game is essentially just a clone of a KidsCanCode tutorial but dressed with my own art assets. It's rather lackluster now, in retrospect, but I was proud of finally finishing a game. 
+
+<div class="gallery">
+    <Image src={image4} alt="Star Fighter - First Version" />
+    <Image src={image3} alt="Star Fighter - First Version" />
+</div>
+
+
+After studying Python for some months and participating in a few game jams, I decided to come back and review Star Fighter to see if there's anything else I could improve. Back then, I didn't know better, so I set about adding every cool feature I could think of and in a span of a week, I ended up with a mess of a codebase such that adding new features became exponentially time-consuming and tedious. It got so bad that I eventually decided to take a step back and re-evaluate.
+
+Luckily, around the same time, I was attending university lectures and the topic that week was about design patterns. After researching more and learning about them - particularly the State pattern - I quickly set about to rewrite the entire codebase from scratch but this time with much more care put into every line of code.
+
+It took over a month to rework the entire game, and when I say that, I meant reworking not just the codebase but the 'creative' side, as well. Indeed, I'd guesstimate that 70% of the time was spent redesigning the gameplay and the art assets, which now featured animations. The resulting game was substantially more complex than the previous version on all fronts. 
+
+<div class="gallery">
     <Image src={image1} alt="Star Fighter Intro Screen" />
     <Image src={image2} alt="Star Fighter Gameplay" />
 </div>
+
+I updated the game for a couple of months, which was mostly minor graphical enhancements, but eventually I wanted to move on to other projects and so called it quits. I open-sourced the codebase to give back to the community because I generously "borrowed" and studied other open-source codebases, and I definitely wouldn't have been able to solve a number of problems without them.
+
+Looking back, there's still a number of glaring game design and code issues present. Not making the 'triple gun' powerup not expire is rather silly, for example, and it was made as a bandaid for the game's exponentially increasing difficulty. There's also some code choices I made that seem rather bizarre in retrospect - the UI code for one is rather messy and I went about loading the animation frames in a brute-force manner.
+
+And that's all she wrote. Well, perhaps there's a bit more. Star Fighter is a project that I'm really fond of as it unified all of my interests - worldbuilding, game design, art, and programming. It was also the subject of a write-up in two articles on Linux Format, and seeing my name on print was cool! But more importantly, it was also the project in which I received my first fan mail that raved about how much they enjoyed my game and that was really really cool!
+
+Anyways, if you enjoyed this write-up, I'd like you to know that I'm currently developing a spiritual successor to Star Fighter called ***Glass Wing***. No details yet, but stay tuned!
+
