Fixed the ugly date formattingin projects list

--- a/src/content/projects/StarFighter.mdx
+++ b/src/content/projects/StarFighter.mdx
@@ -52,7 +52,7 @@ I continued to update the game for a couple of months, which mostly consisted of
 
 Looking back, there's still a number of glaring game design and code issues present. Not making the 'triple gun' powerup not expire is rather silly, for example, and it was made as a bandaid for the game's exponentially increasing difficulty. There's also some code choices I made that seem rather bizarre in retrospect - the UI code for one is rather messy and I went about loading the animation frames in a brute-force manner.
 
-And that's all she wrote. Well, perhaps there's a bit more. Star Fighter is a project that I'm really fond of as it unified all of my interests - worldbuilding, game design, art, and programming. It was also the subject of a write-up in two articles on Linux Format, and seeing my name on print was cool! But more importantly, it was also the project in which I received my first fan mail that raved about how much they enjoyed my game and that was really really cool!
+And that's all she wrote. Well, perhaps there's a bit more. Star Fighter is a project that I'm really fond of as it unified all of my interests - worldbuilding, game design, art, and programming. It was also the subject of a write-up in two articles on Linux Format, and seeing my name on print was cool! But more importantly, it was also the project in which I received my first fan mail that raved about how much they enjoyed my game and **that** was really cool!
 
 Anyways, if you enjoyed this write-up, I'd like you to know that I'm currently developing a spiritual successor to Star Fighter called ***Glass Wing***. No details yet, but stay tuned!
 
