--- a/src/content/projects/StarFighter.mdx
+++ b/src/content/projects/StarFighter.mdx
@@ -18,9 +18,7 @@ import image2 from '@assets/StarFighter/image-2.png';
 import image3 from '@assets/StarFighter/image-3.png';
 import image4 from '@assets/StarFighter/image-4.png';
 
-**Star Fighter** is a **2D shoot 'em up** which takes inspiration from 80s arcade games like Galaga and Defender, as well as modern titles like ZeroRanger. In the game, the player controls the titular Star Fighter and is tasked with gaining as much score as possible by shooting the endless torrent of enemies and avoiding projectiles.
-
-I wrote the game in **Python** using the **pygame** framework. In addition, I designed and animated the pixel art assets. Save for the music, which was composed by a friend, I developed the game by myself to learn Python and game development.
+**Star Fighter** is a **2D shoot 'em up** which tasks the player with shooting down endless hordes of enemies and dodging projectiles to gain a high score. The mechanics and aesthetics of the game take inspiration from 80s arcade games like Galaga and Defender, as well as modern titles like ZeroRanger.
 
 <div class="iframe-container">
     <iframe src="https://www.youtube.com/embed/oP6xZnNXMc4?si=QlOrKGkuQIgFhA4e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -28,31 +26,29 @@ I wrote the game in **Python** using the **pygame** framework. In addition, I de
 
 ## In Detail
 
-Star Fighter is the first game that I released publicly. Up until then, I've been developing games using pygame and other game engines rather aimlessly. After deciding to settle down with pygame as I felt that full-fledged game engines such as Unity were overwhelming, I hunkered down for a couple of weeks to learn everything I can about it. 
+Star Fighter is a game that I wrote in Python with the help of the **pygame** framework. In addition to programming, I also designed and animated the art assets that you can see in game. Save for the music, which was composed by my talented friend **YoItsRion**, the endeavor was undertaken as a solo project meant to explore object-oriented programming, design patterns, and the Python language.   
 
-The first version of the game is essentially just a clone of a KidsCanCode tutorial but dressed with my own art assets. It's rather lackluster, in retrospect, but I was proud of finally finishing a game. 
+I started development in 2021 while I was following a KidsCanCode tutorial for making a simple shoot 'em up using the pygame framework. The first version of the game was essentially a clone dressed with my own art assets and a few custom enemies. 
 
 <div class="txt-center">
     <Image src={image4} alt="Star Fighter - First Version" />
     <Image src={image3} alt="Star Fighter - First Version" />
 </div>
 
-I released the game on itch.io as Version 1 and left it at that. I participated in a few game jams over the following months before deciding to come back and review Star Fighter to see what else I could improve upon. Back then, I didn't know better, so I set about adding every cool feature I could think of and within a week, I ended up with such a mess of a codebase that adding new features became exponentially time-consuming and tedious. It got so bad that I eventually decided to take a step back and re-evaluate.
+Though the tutorial proved to be useful in learning the basics such as the game loop, rendering, and simple AI logic; I soon ran into a problem when I tried to add new enemies, logic, and scenes. The source code, at this point, did not observe object-oriented principles so class relationships are vague, and some classes assumed other classes would not change. To make a long story short, the source code became such a rigid and tangled mess that adding new features required rewriting entire systems from scratch. There had to be a better way, and indeed I quickly found a solution to my problem - design patterns.
 
-Luckily, around the same time, I was attending my university lectures and the topic that week was coincidentally about design patterns. After researching more and learning about them - particularly the State pattern - I set about to rewrite the entire codebase from scratch but this time with the appropriate design patterns in mind.
+The State pattern was used the most in the game as it fit the game loop perfectly - an abstract 'State' that had its behavior subdivided into handling input, processing updates, and displaying the output.
 
-It took over a month to rework the entire game, and I meant reworking not just the codebase but the 'creative' side, as well. In fact, I'd guesstimate that 70% of the time was spent redesigning the gameplay and the art assets, which now featured animations. The resulting game was substantially more complex than the previous version on all fronts. 
+After a couple of weeks of reworking the codebase, the addition of new features became much more straightforward. Thanks to the much more flexible codebase I was working with, the next update saw the addition of new enemy types, gameplay enhancements such as a scaling difficulty level, and an overhaul to the game's graphics - including proper animation. The resulting game was much more polished than the previous version. 
 
 <div class="txt-center">
     <Image src={image1} alt="Star Fighter Intro Screen" />
     <Image src={image2} alt="Star Fighter Gameplay" />
 </div>
 
-I continued to update the game for a couple of months, which mostly consists of minor graphical enhancements. Eventually, I wanted to move on to other projects and so called it quits. Before that though, I decided to open-source the codebase to give back to the community as I "borrowed" and studied other open-source codebases during development, and I definitely wouldn't have been able to solve a number of problems without them.
+I released the updated game on itch.io for Windows, and it was received quite well. Indeed, I even received my first fan mail from it which was really fulfilling. Other developers soon found that the game also worked on Linux albeit with a few tweaks on the file handling, so I updated the source code to use platform-agnostic code in response. It was also around that time that a writer for a UK-based magazine called **Linux Format** took interest in the game, and implemented a multiplayer component (using _sockets_ - a low-level networking interface) for the game which I did not even thought possible. The articles about this can be found on Linux Format (<a class="external" href="https://issuu.com/futurepublishing/docs/lxf282.issuu" target="_blank" rel="noopener noreferrer">#282</a> and <a class="external" href="https://issuu.com/futurepublishing/docs/lxf283.issuu" target="_blank" rel="noopener noreferrer">#283</a>)
 
-Looking back, there's still a number of glaring game design and code issues present. Not making the 'triple gun' powerup not expire is rather silly, for example, and it was made as a bandaid for the game's exponentially increasing difficulty. There's also some code choices I made that seem rather bizarre in retrospect - the UI code for one is rather messy and I went about loading the animation frames in a brute-force manner.
+Looking back, there's still some game design and code issues that could be improved. For example, the 'triple gun' powerup does not expire - a game design choice that was made as a bandaid for the game's scaling difficulty. In retrospect, the game could have done without this design choice as it made the game too easy on higher difficulties, and detracted from one of the main focus of the game - which is dodging projectiles. There were also issues in the UI and animation code which admittedly is difficult to read and reason about - some sections of the code, for example, were hardcoded and does not account for different screen sizes and orientations. 
 
-And that's all she wrote. Well, perhaps there's a bit more. Star Fighter is a project that I'm really fond of as it unified all of my interests - games, art, and programming. It was also the subject of a write-up in two issues on Linux Format (<a class="external" href="https://issuu.com/futurepublishing/docs/lxf282.issuu" target="_blank" rel="noopener noreferrer">#282</a> and <a class="external" href="https://issuu.com/futurepublishing/docs/lxf283.issuu" target="_blank" rel="noopener noreferrer">#283</a>), and seeing my name on print is cool! But more importantly, it was also the project in which I received my first fan mail, talking about how much they enjoyed my game, and **that** is really cool!
-
-Anyways, if you enjoyed this write-up, I'd like you to know that I'm currently developing a spiritual successor to Star Fighter called ***Glass Wing***. No details yet, but stay tuned!
+Nevertheless, Star Fighter ultimately became the project that gave me first-hand experience with implementing my learnings on object-oriented principles, design patterns, and the ins and outs of the Python language. Up until that point, these concepts were merely theoretical knowledge that I have had not the opportunity to translate into concrete applications. Star Fighter basically was the opportunity to apply those things, and for that, it rightfully serves as the first milestone for my nascent software engineering career.
 
