--- a/src/content/projects/StarFighter.mdx
+++ b/src/content/projects/StarFighter.mdx
@@ -35,20 +35,20 @@ I started development in 2021 while I was following a KidsCanCode tutorial for m
     <Image src={image3} alt="Star Fighter - First Version" />
 </div>
 
-Though the tutorial proved to be useful in learning the basics such as the game loop, rendering, and simple AI logic; I soon ran into a problem when I tried to add new enemies, logic, and scenes. The source code, at this point, did not observe object-oriented principles so class relationships are vague, and some classes assumed other classes would not change. To make a long story short, the source code became such a rigid and tangled mess that adding new features required rewriting entire systems from scratch. There had to be a better way, and indeed I quickly found a solution to my problem - design patterns.
+Though the tutorial proved to be useful in learning the basics such as the game loop, rendering, and simple AI logic; I soon ran into a problem when I tried to add new enemies, logic, and scenes. The source code, at this point, did not observe the object-oriented paradigm so class relationships are vague, and some classes assumed other classes would not change. To make a long story short, the source code became such a rigid and tangled mess that adding new features required rewriting entire systems from scratch. There had to be a better way, and indeed I quickly found a solution to my problem - design patterns.
 
-The State pattern was used the most in the game as it fit the game loop perfectly - an abstract 'State' that had its behavior subdivided into handling input, processing updates, and displaying the output.
+The State pattern was used the most as it fit the game loop perfectly - an abstract 'State' that had its data and behavior subdivided into handling input, processing updates, and displaying the output. This pattern solved the problem of data encapsulation, and separation of concerns while providing a common interface fo the game loop.
 
-After a couple of weeks of reworking the codebase, the addition of new features became much more straightforward. Thanks to the much more flexible codebase I was working with, the next update saw the addition of new enemy types, gameplay enhancements such as a scaling difficulty level, and an overhaul to the game's graphics - including proper animation. The resulting game was much more polished than the previous version. 
+After a couple of weeks of reworking the codebase, the addition of new features became straightforward. Thanks to the much more flexible codebase I was working with, the next update saw the addition of new enemy types, gameplay enhancements such as a scaling difficulty level, and an overhaul to the game's graphics - including proper animation. The resulting game was more polished than ever before. 
 
 <div class="txt-center">
     <Image src={image1} alt="Star Fighter Intro Screen" />
     <Image src={image2} alt="Star Fighter Gameplay" />
 </div>
 
-I released the updated game on itch.io for Windows, and it was received quite well. Indeed, I even received my first fan mail from it which was really fulfilling. Other developers soon found that the game also worked on Linux albeit with a few tweaks on the file handling, so I updated the source code to use platform-agnostic code in response. It was also around that time that a writer for a UK-based magazine called **Linux Format** took interest in the game, and implemented a multiplayer component (using _sockets_ - a low-level networking interface) for the game which I did not even thought possible. The articles about this can be found on Linux Format (<a class="external" href="https://issuu.com/futurepublishing/docs/lxf282.issuu" target="_blank" rel="noopener noreferrer">#282</a> and <a class="external" href="https://issuu.com/futurepublishing/docs/lxf283.issuu" target="_blank" rel="noopener noreferrer">#283</a>)
+I released the update on itch.io for Windows, and it was received quite well. Indeed, I even received my first fan mail from it which was really fulfilling. Other developers soon found that the game also worked on Linux albeit with a few tweaks on the file handling, so I corrected the source code to use platform-agnostic code in response. It was also around that time that a writer for a UK-based magazine called **Linux Format** took interest in the game, and implemented a multiplayer component (using _sockets_ - a low-level networking interface) for the game which I did not even thought possible. The articles about this can be found on Linux Format (<a class="external" href="https://issuu.com/futurepublishing/docs/lxf282.issuu" target="_blank" rel="noopener noreferrer">#282</a> and <a class="external" href="https://issuu.com/futurepublishing/docs/lxf283.issuu" target="_blank" rel="noopener noreferrer">#283</a>)
 
-Looking back, there's still some game design and code issues that could be improved. For example, the 'triple gun' powerup does not expire - a game design choice that was made as a bandaid for the game's scaling difficulty. In retrospect, the game could have done without this design choice as it made the game too easy on higher difficulties, and detracted from one of the main focus of the game - which is dodging projectiles. There were also issues in the UI and animation code which admittedly is difficult to read and reason about - some sections of the code, for example, were hardcoded and does not account for different screen sizes and orientations. 
+Looking back, there's still some game design and code issues that could be improved. For example, the 'triple gun' powerup does not expire - a game design choice that was made as a bandaid for the game's scaling difficulty. In retrospect, the game could have done without this design choice as it made the game too easy on higher difficulties, and detracted from one of the main focus of the game - which is dodging projectiles. There were also issues in the UI and animation code which admittedly is difficult to read and reason about - some sections of the code, for example, were hardcoded and do not account for different screen sizes and orientations. 
 
 Nevertheless, Star Fighter ultimately became the project that gave me first-hand experience with implementing my learnings on object-oriented principles, design patterns, and the ins and outs of the Python language. Up until that point, these concepts were merely theoretical knowledge that I have had not the opportunity to translate into concrete applications. Star Fighter basically was the opportunity to apply those things, and for that, it rightfully serves as the first milestone for my nascent software engineering career.
 
