--- a/src/content/projects/StarFighter.mdx
+++ b/src/content/projects/StarFighter.mdx
@@ -37,7 +37,7 @@ I started development in 2021 while I was following a KidsCanCode tutorial for m
 
 Though the tutorial proved to be useful in learning the basics such as the game loop, rendering, and simple AI logic; I soon ran into a problem when I tried to add new enemies, logic, and scenes. The source code, at this point, did not observe the object-oriented paradigm so class relationships are vague, and some classes assumed other classes would not change. To make a long story short, the source code became such a rigid and tangled mess that adding new features required rewriting entire systems from scratch. There had to be a better way, and indeed I quickly found a solution to my problem - design patterns.
 
-The State pattern was used the most as it fit the game loop perfectly - an abstract 'State' that had its data and behavior subdivided into handling input, processing updates, and displaying the output. This pattern solved the problem of data encapsulation, and separation of concerns while providing a common interface fo the game loop.
+The State pattern was used the most as it fit the game loop perfectly - an abstract 'State' that had its data and behavior subdivided into handling input, processing updates, and displaying the output. This pattern solved the problem of data encapsulation, and separation of concerns while providing a common interface for the game loop.
 
 After a couple of weeks of reworking the codebase, the addition of new features became straightforward. Thanks to the much more flexible codebase I was working with, the next update saw the addition of new enemy types, gameplay enhancements such as a scaling difficulty level, and an overhaul to the game's graphics - including proper animation. The resulting game was more polished than ever before. 
 
