--- a/src/content/projects/StarFighter.mdx
+++ b/src/content/projects/StarFighter.mdx
@@ -46,9 +46,9 @@ After a couple of weeks of reworking the codebase, the addition of new features 
     <Image src={image2} alt="Star Fighter Gameplay" />
 </div>
 
-I released the update on itch.io for Windows, and it was received quite well. Indeed, I even received my first fan mail from it which was really fulfilling. Other developers soon found that the game also worked on Linux albeit with a few tweaks on the file handling, so I corrected the source code to use platform-agnostic code in response. It was also around that time that a writer for a UK-based magazine called **Linux Format** took interest in the game, and implemented a multiplayer component (using _sockets_ - a low-level networking interface) for the game which I did not even thought possible. The articles about this can be found on Linux Format (<a class="external" href="https://issuu.com/futurepublishing/docs/lxf282.issuu" target="_blank" rel="noopener noreferrer">#282</a> and <a class="external" href="https://issuu.com/futurepublishing/docs/lxf283.issuu" target="_blank" rel="noopener noreferrer">#283</a>)
+I released the update on itch.io for Windows, and it was received quite well. Indeed, I even received my first fan mail from it which was really fulfilling. Other developers soon found that the game also works on Linux albeit with a few tweaks on the file handling, so I corrected the source code to use platform-agnostic code in response. It was also around that time that a writer for a UK-based magazine called **Linux Format** took interest in the game, and implemented a multiplayer component (using _sockets_ - a low-level networking interface) which I did not even thought possible. The articles about this can be found on Linux Format (<a class="external" href="https://issuu.com/futurepublishing/docs/lxf282.issuu" target="_blank" rel="noopener noreferrer">#282</a> and <a class="external" href="https://issuu.com/futurepublishing/docs/lxf283.issuu" target="_blank" rel="noopener noreferrer">#283</a>)
 
-Looking back, there's still some game design and code issues that could be improved. For example, the 'triple gun' powerup does not expire - a game design choice that was made as a bandaid for the game's scaling difficulty. In retrospect, the game could have done without this design choice as it made the game too easy on higher difficulties, and detracted from one of the main focus of the game - which is dodging projectiles. There were also issues in the UI and animation code which admittedly is difficult to read and reason about - some sections of the code, for example, were hardcoded and do not account for different screen sizes and orientations. 
+Looking back, there's still some game design and code issues that could be improved. For example, the 'triple gun' powerup does not expire - a game design choice that was made as a bandaid for the game's scaling difficulty. In retrospect, the game could have done without this as it made the game too easy on higher difficulties, and detracted from one of the main focus of the game - which is dodging projectiles. There were also issues in the UI and animation code which admittedly is difficult to read and reason about - some sections of the code, for example, were hardcoded and do not account for different screen sizes and orientations. 
 
 Nevertheless, Star Fighter ultimately became the project that gave me first-hand experience with implementing my learnings on object-oriented principles, design patterns, and the ins and outs of the Python language. Up until that point, these concepts were merely theoretical knowledge that I have had not the opportunity to translate into concrete applications. Star Fighter basically was the opportunity to apply those things, and for that, it rightfully serves as the first milestone for my nascent software engineering career.
 
